--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <!-- Footer -->
-	<footer class="sticky-bottom p-3">
+	<footer class="sticky-bottom p-3 container-fluid">
 		<h4>Data (not so) Intelligence Team</h4>
 	</footer>
     
