Header changes, navigation to home page

--- a/pages/azure_devOps.html
+++ b/pages/azure_devOps.html
@@ -30,11 +30,17 @@
 <body>
 
 
-    <div class="header sticky-top container-fluid">
-
-        <h1 class="page-title">DevOps Story Boards</h1>
-        
-    </div>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../assets/data.png" alt="Logo" width="30" height="24" class="header-logo d-inline-block align-text-top">
+          </a>
+          <h1 class="page-title d-inline-block align-text-top">DevOps Story Boards</h1>
+          <a class="navbar-brand" href="https://www.lids.com/" target="_blank">
+            <img src="../assets/cap.png" alt="Logo" width="30" height="24" class="header-logo d-inline-block align-text-top">
+          </a>
+        </div>
+    </nav>
 
     <div class="container">
 
